advanced... (added grunt supported.)

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <!-- <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css"> -->
         <!-- <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
         <link rel="stylesheet" href="css/bootstrap3/bootstrap.min.css">
-        <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap-theme.min.css"> -->
+        <link rel="stylesheet" href="css/bootstrap3/bootstrap-theme.min.css">
         <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.slate.min.css"> -->
         <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.paper.min.css"> -->
         <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.yeti.min.css"> -->
-        <link rel="stylesheet" href="css/bootstrap3/bootstrap.darkly.min.css">
+        <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.darkly.min.css"> -->
         <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.superhero.min.css"> -->
         <link rel="stylesheet" href="css/bootstrap3/bootstrap-select.min.css">
         <link rel="stylesheet" href="css/normalize.css">
