--- a/index.html
+++ b/index.html
@@ -11,129 +11,127 @@
   <link rel="stylesheet" href="css/xstudio-theme.css">
   <link rel="stylesheet" href="css/bootstrap3/bootstrap-select.min.css">
   <link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
+  <link rel="stylesheet" href="css/jqlayout-default.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-  <div class="row-fixed fullwidth">
-    <header>
-      <div class="navbar" role="navigation"> <!-- {{{ -->
-      <!-- <div class="navbar navbar-inverse" role="navigation">  -->
-        <div class="container" style="width: 100%">
-          <div class="navbar-header" style="padding: 0 20px;">
-            <button type="button" class="navbar-toggle"
-                data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle Navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="javascript:void(0);">XStudio Lite</a>
-          </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li>
-                <a href="#" class="" data-toggle="dropdown">Start<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">New Project</a></li>
-                  <li><a href="#">New File</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Open Project</a></li>
-                  <li><a href="#">Close Project</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Save Project</a></li>
-                  <li><a href="#">Save All</a></li>
-                  <li><a href="#">Save As</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Import</a></li>
-                  <li><a href="#">Export</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">Edit</a>
-              </li>
-              <li>
-                <a href="#">Window</a>
-              </li>
-              <li>
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">View Help</a></li>
-                  <li><a href="#">About XStudio-Lite</a></li>
-                </ul>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Guy<span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="javascript:void(0)">Profile</a></li>
-                  <li><a href="javascript:void(0)">Settings</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div> <!-- /.nav-collapse -->
+  <div id="pageWrapper" class="row-fixed fullwidth" style="position: fixed; left: 0; top: 0; bottom: 0; right: 0;">
+    <div class="navbar" role="navigation"> <!-- {{{ -->
+    <!-- <div class="navbar navbar-inverse" role="navigation">  -->
+      <div class="container" style="width: 100%">
+        <div class="navbar-header" style="padding: 0 20px;">
+          <button type="button" class="navbar-toggle"
+              data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle Navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="javascript:void(0);">XStudio Lite</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="#" class="" data-toggle="dropdown">Start<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">New Project</a></li>
+                <li><a href="#">New File</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Open Project</a></li>
+                <li><a href="#">Close Project</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Save Project</a></li>
+                <li><a href="#">Save All</a></li>
+                <li><a href="#">Save As</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Import</a></li>
+                <li><a href="#">Export</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">Edit</a>
+            </li>
+            <li>
+              <a href="#">Window</a>
+            </li>
+            <li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">View Help</a></li>
+                <li><a href="#">About XStudio-Lite</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Guy<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="javascript:void(0)">Profile</a></li>
+                <li><a href="javascript:void(0)">Settings</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div> <!-- /.nav-collapse -->
       </div>
-      <!-- }}} -->
-    </header>
+    </div>
 
-    <div id="workbench" class="col">
-      <div class="btn-toolbar" role="toolbar" style="padding: 5px;"> <!-- {{{ -->
-        <div class="btn-group">
-          <a class="btn btn-default" href="#">
-            <span class="glyphicon glyphicon-asterisk"></span>
-          </a>
-          <a class="btn btn-default" href="#">
-            <span class="glyphicon glyphicon-move"></span>
-          </a>
-          <a class="btn btn-default" href="#">
-            <span class="glyphicon glyphicon-refresh"></span>
-          </a>
-          <a class="btn btn-default" href="#">
-            <span class="glyphicon glyphicon-fullscreen"></span>
-          </a>
-        </div>
+    <div class="btn-toolbar" role="toolbar" style="padding: 5px;"> 
+      <div class="btn-group">
+        <a class="btn btn-default" href="#">
+          <span class="glyphicon glyphicon-asterisk"></span>
+        </a>
+        <a class="btn btn-default" href="#">
+          <span class="glyphicon glyphicon-move"></span>
+        </a>
+        <a class="btn btn-default" href="#">
+          <span class="glyphicon glyphicon-refresh"></span>
+        </a>
+        <a class="btn btn-default" href="#">
+          <span class="glyphicon glyphicon-fullscreen"></span>
+        </a>
+      </div>
 
-        <div class="btn-group" style="position: relative; left: 50%;margin-left: -240px;">
-          <a class="btn btn-default" href="#">
-            <span class="glyphicon glyphicon-play"></span>
-          </a>
-          <a class="btn btn-default" href="#">
-            <span class="glyphicon glyphicon-pause"></span>
-          </a>
-          <a class="btn btn-default" href="#">
-            <span class="glyphicon glyphicon-step-forward"></span>
-          </a>
-        </div>
+      <div class="btn-group" style="position: relative; left: 50%;margin-left: -240px;">
+        <a class="btn btn-default" href="#">
+          <span class="glyphicon glyphicon-play"></span>
+        </a>
+        <a class="btn btn-default" href="#">
+          <span class="glyphicon glyphicon-pause"></span>
+        </a>
+        <a class="btn btn-default" href="#">
+          <span class="glyphicon glyphicon-step-forward"></span>
+        </a>
+      </div>
 
-        <div class="btn-group pull-right">
-          <select id="selResolution" name="selResolution" class="selectpicker" data-style="btn-default" data-size="100%" data-container="body">
-            <option value="0">Default</option>
-            <option value="480:320">480 * 320</option>
-            <option value="320:480">320 * 480</option>
-            <option value="960:640">960 * 640</option>
-            <option value="640:960">640 * 960</option>
-            <option value="1024:768">1024 * 768</option>
-            <option value="768:1024">768 * 1024</option>
-            <option value="?">Custom Size(*)</option>
-          </select>
-        </div>
+      <div class="btn-group pull-right">
+        <select id="selResolution" name="selResolution" class="selectpicker" data-style="btn-default" data-size="100%" data-container="body">
+          <option value="0">Default</option>
+          <option value="480:320">480 * 320</option>
+          <option value="320:480">320 * 480</option>
+          <option value="960:640">960 * 640</option>
+          <option value="640:960">640 * 960</option>
+          <option value="1024:768">1024 * 768</option>
+          <option value="768:1024">768 * 1024</option>
+          <option value="?">Custom Size(*)</option>
+        </select>
+      </div>
 
-        <!-- <div class="btn-group pull-right"> -->
-          <!-- <form class="input-group" action="#"> -->
-            <!-- <input id="id_search" class="form-control" type="text" name="search" maxlength="200"> -->
-            <!-- <span class="input-group-btn"> -->
-              <!-- <button class="btn btn-default btn-group" type="submit" name="submit_search" value="search">Search</button> -->
-            <!-- </span> -->
-          <!-- </form> -->
-        <!-- </div> -->
-      </div> <!-- }}} -->
+      <!-- <div class="btn-group pull-right"> -->
+        <!-- <form class="input-group" action="#"> -->
+          <!-- <input id="id_search" class="form-control" type="text" name="search" maxlength="200"> -->
+          <!-- <span class="input-group-btn"> -->
+            <!-- <button class="btn btn-default btn-group" type="submit" name="submit_search" value="search">Search</button> -->
+          <!-- </span> -->
+        <!-- </form> -->
+      <!-- </div> -->
+    </div> <!-- }}} -->
 
-      <div id="workbenchContent" class="clearfix col">
-        <div id="hierarchyView" class="col-sm-1 col-md-1 col-lg-2"> <!-- {{{ -->
+    <div id="workbench" style="height: calc(100% - 77px);">
+
+        <div id="hierarchyView"> <!-- {{{ -->
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">Hierarchy</h3>
@@ -171,7 +169,7 @@
           </div>
         </div> <!-- }}} -->
 
-        <div id="editorView" class="col-sm-7 col-md-7 col-lg-7 fullheight">
+        <div id="editorView" class="ui-layout-center"> <!-- {{{ -->
           <div class="panel panel-default fullheight">
             <div class="panel-heading" style="padding: 2px 2px 0 2px;">
               <!-- <h3 class="panel-title">Editor</h3> -->
@@ -201,8 +199,9 @@
             </div>
           </div>
 
-        </div>
-        <div id="propertiesView" class="col-sm-4 col-md-4 col-lg-3 fullheight">
+        </div> <!-- }}} -->
+
+        <div id="propertiesView"> <!-- {{{ -->
           <div class="panel panel-default fullheight">
             <div class="panel-heading">
               <h3 class="panel-title">
@@ -355,9 +354,7 @@
                           </td>
                         </tr>
                       </table>
-
                     </div>
-
                   </div>
                 </div>
               </div>
@@ -366,15 +363,13 @@
             <div style="text-align: center;">
               <button id="btnAddComponent" class="btn btn-primary">Add Component</button>
             </div>
-
           </div>
-        </div>
+        </div> <!-- }}} -->
+
+      <div class="ui-layout-south well" style="text-align: center;">
+        Copyright &copy; Jeremy All right reseved.
       </div>
     </div>
-
-    <footer>
-      I'm footer
-    </footer>
   </div>
 
   <!--页尾-->
@@ -391,5 +386,45 @@
   <!-- <script src="js/system/AnimatorSystem.js" charset="UTF-8"></script> -->
   <!-- <script src="js/demo.js" charset="UTF-8"></script> -->
   <script src="js/main.js" charset="UTF-8"></script>
+  <script src="js/studio.js" charset="UTF-8"></script>
+  <script type="text/javascript">
+    +(function($) {
+      $(document).ready(function( ){
+        $('#workbench').layout({
+          defaults: {
+            fxName: 'none',
+            fxSpeed: 'normal',
+        resizable: false,
+        slidable: false
+          },
+          west: {
+            paneSelector: '#hierarchyView',
+            size: 250,
+        spacing_closed: 21,
+        togglerAlign_closed: "top",
+        togglerAlign_open: 0,
+        togglerTip_open: "Close Weat Pane",
+        togglerTip_closed: "Open West Pane",
+        resizerTip_open: "Reisze West Pane",
+        slideTrigger_open: "click",
+        initClosed: false,
+        fxSettings: {
+          easing: "easeOutBounce"
+        }
+          },
+          east: {
+            paneSelector: '#propertiesView',
+            slidable: true,
+            size: 300
+          },
+          center: {
+            paneSelector: '#editorView',
+        resizable: true,
+        slidable: true
+          }
+        });
+      });
+    }(jQuery));
+  </script>
 </body>
 </html>
